force-app/main/default/objects/Exclusive_Campaign_Order__c/Exclusive_Campaign_Order__c.object-meta.xml
<CustomObject>
    <label>Exclusive Campaign Order</label>
    <nameField>
        <displayFormat>ECO-{000000}</displayFormat>
        <label>Exclusive Campaign Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusive Campaign Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>