force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/CA_Code__c.field-meta.xml
<CustomField>
    <fullName>CA_Code__c</fullName>
    <formula>Client_Advisor__r.WWEmployeeNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Code</label>
    <type>Text</type>
</CustomField>