force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/CA_MANAGEMENT_ZONE_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>CA_MANAGEMENT_ZONE_LEVEL__c</fullName>
    <formula>TEXT(Store__r.MANAGEMENT_ZONE_LEVEL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA MANAGEMENT ZONE LEVEL</label>
    <type>Text</type>
</CustomField>