force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/CA_Store_Code__c.field-meta.xml
<CustomField>
    <fullName>CA_Store_Code__c</fullName>
    <formula>Store__r.RetailStoreId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Store Code</label>
    <type>Text</type>
</CustomField>