force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Cancel_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Order_Reason__c</fullName>
    <label>Cancel Order Reason</label>
    <type>TextArea</type>
</CustomField>