force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the Client</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exclusive Campaign Orders</relationshipLabel>
    <relationshipName>Exclusive_Campaign_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>