force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Corp__c.field-meta.xml
<CustomField>
    <fullName>Corp__c</fullName>
    <formula>$Permission.Corps_Access</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp ?</label>
    <type>Checkbox</type>
</CustomField>