force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Received in Store</fullName>
            </value>
            <value>
                <fullName>Delivered To Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>