force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Deposit_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Number__c</fullName>
    <label>Deposit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>