force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Exclusive_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exclusive Campaign</label>
    <referenceTo>Exclusive_Campaign__c</referenceTo>
    <relationshipLabel>Exclusive Campaign Orders</relationshipLabel>
    <relationshipName>Exclusive_Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>