force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/IsCanceled__c.field-meta.xml
<CustomField>
    <fullName>IsCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCanceled</label>
    <type>Checkbox</type>
</CustomField>