force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/My_Country__c.field-meta.xml
<CustomField>
    <fullName>My_Country__c</fullName>
    <formula>TEXT( Store__r.StoreCountry__c ) = TEXT( $User.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Country ?</label>
    <type>Checkbox</type>
</CustomField>