force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/My_Management_Level_Zone__c.field-meta.xml
<CustomField>
    <fullName>My_Management_Level_Zone__c</fullName>
    <formula>OR(
	AND(
		NOT(ISPICKVAL( Store__r.MANAGEMENT_ZONE_LEVEL__c  , &apos;13&apos;)),
		TEXT( $User.MANAGEMENT_ZONE_LEVEL__c) == TEXT( Store__r.MANAGEMENT_ZONE_LEVEL__c)
	),


	AND(
		ISPICKVAL( Store__r.MANAGEMENT_ZONE_LEVEL__c  , &apos;13&apos;),
		ISPICKVAL($User.Country__c,&apos;KOREA&apos;),
		Store_Country__c == &apos;KOREA&apos;
	),

	AND(
		ISPICKVAL( Store__r.MANAGEMENT_ZONE_LEVEL__c  , &apos;13&apos;),
		ISPICKVAL( $User.MANAGEMENT_ZONE_LEVEL__c , &apos;13&apos;),
		NOT(ISPICKVAL($User.Country__c,&apos;KOREA&apos;)),
		Store_Country__c &lt;&gt; &apos;KOREA&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Management Level Zone</label>
    <type>Checkbox</type>
</CustomField>