force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/My_Management_Zone_Level__c.field-meta.xml
<CustomField>
    <fullName>My_Management_Zone_Level__c</fullName>
    <formula>TEXT($User.MANAGEMENT_ZONE_LEVEL__c) =  TEXT(Store__r.MANAGEMENT_ZONE_LEVEL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Management Zone Level</label>
    <type>Checkbox</type>
</CustomField>