force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <formula>OR( Client_Advisor__c = $User.Id , CreatedById = $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Order ?</label>
    <type>Checkbox</type>
</CustomField>