force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/My_Store__c.field-meta.xml
<CustomField>
    <fullName>My_Store__c</fullName>
    <formula>TEXT( $User.DefaultStore__c )=  Store_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Store</label>
    <type>Checkbox</type>
</CustomField>