force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Pre_TEST__c.field-meta.xml
<CustomField>
    <fullName>Pre_TEST__c</fullName>
    <label>Pre_TEST</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAL 1</fullName>
            </value>
            <value>
                <fullName>VAL 2</fullName>
            </value>
            <value>
                <fullName>VAL 3</fullName>
            </value>
            <value>
                <fullName>VAL 4</fullName>
            </value>
            <value>
                <fullName>VAL 5</fullName>
            </value>
            <value>
                <fullName>VAL 6</fullName>
            </value>
            <value>
                <fullName>VAL 7</fullName>
            </value>
            <value>
                <fullName>VAL 8</fullName>
            </value>
            <value>
                <fullName>VAL 9</fullName>
            </value>
            <value>
                <fullName>VAL 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>