force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Description/name of the product</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Exclusive_Campaign_Product__c.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>11/28/2023 12:00 AM</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exclusive_Campaign_Product__c</referenceTo>
    <relationshipLabel>Exclusive Campaign Orders (Product)</relationshipLabel>
    <relationshipName>Exclusive_Campaign_Orders1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>