force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Date__c</fullName>
    <description>Date of the reservation</description>
    <label>Reserved Date</label>
    <type>Date</type>
</CustomField>