force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Serial_Number_Product__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Product__c</fullName>
    <label>Serial Number Product</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>