force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Serial_Number_Quota__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Quota__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Exclusive Campaign Orders</relationshipLabel>
    <relationshipName>Exclusive_Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>