force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the Store</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Exclusive Campaign Orders</relationshipLabel>
    <relationshipName>Exclusive_Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>