force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Store_Country__c.field-meta.xml
<CustomField>
    <fullName>Store_Country__c</fullName>
    <formula>TEXT( Store__r.StoreCountry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Country / Region</label>
    <type>Text</type>
</CustomField>