force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_CancelOrderReason__c.field-meta.xml
<CustomField>
    <fullName>TECH_CancelOrderReason__c</fullName>
    <label>Cancel Order Reason</label>
    <type>TextArea</type>
</CustomField>