force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>