force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/Tech_Country__c.field-meta.xml
<CustomField>
    <fullName>Tech_Country__c</fullName>
    <label>Country / Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>