force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_Product_Color__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_Color__c</fullName>
    <label>Product Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>