force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_Serial_Number__c</fullName>
    <formula>BLANKVALUE(VALUE( Serial_Number_Quota__r.Name),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>