force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_Serial_Number_Product__c.field-meta.xml
<CustomField>
    <fullName>TECH_Serial_Number_Product__c</fullName>
    <label>Serial Number Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>