force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_SKU__c.field-meta.xml
<CustomField>
    <fullName>TECH_SKU__c</fullName>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>