force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_Store_Name__c</fullName>
    <label>Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>