force-app/main/default/objects/Exclusive_Campaign_Order__c/fields/TECH_UniqueOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>TECH_UniqueOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>TECH_UniqueOrderNumber</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>