force-app/main/default/objects/Exclusive_Campaign_Order__c/recordTypes/Exclusive_Campaign_Order.recordType-meta.xml
<RecordType>
    <fullName>Exclusive_Campaign_Order</fullName>
    <active>true</active>
    <label>Exclusive Campaign Order</label>
</RecordType>