force-app/main/default/objects/Exclusive_Campaign_Order__c/recordTypes/Locked_Exclusive_Campaign_Order.recordType-meta.xml
<RecordType>
    <fullName>Locked_Exclusive_Campaign_Order</fullName>
    <active>true</active>
    <label>Locked Exclusive Campaign Order</label>
</RecordType>