force-app/main/default/objects/Exclusive_Campaign_Order__c/validationRules/VR01_MandatoryFieldsToReserve.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_MandatoryFieldsToReserve</fullName>
    <active>true</active>
    <description>Xstore Deposit Number is a mandatory while marking the order as reserved</description>
    <errorConditionFormula>(ISBLANK(Client_Advisor__c) ||
ISBLANK(Store__c) || 
ISBLANK( Client__c))


 &amp;&amp;  Reserved__c</errorConditionFormula>
    <errorMessage>Order is marked as Reserved, thus following fields are mandatory: Client, Store and Client Advisor.</errorMessage>
</ValidationRule>