force-app/main/default/objects/Exclusive_Campaign_Order__c/validationRules/VR03_NoEditionIfOrderReserved.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_NoEditionIfOrderReserved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
PRIORVALUE(Reserved__c ) = true,
NOT(ISNEW()),
OR(
$Profile.Name = &quot;ICON_SA&quot;,
$Profile.Name = &quot;ICON_SA_EVERYWHERE&quot;,
$Profile.Name = &quot;ICONiCS_SA&quot;
)
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify a reserved order</errorMessage>
</ValidationRule>