force-app/main/default/objects/Exclusive_Campaign_Order__c/validationRules/VR04_NoEditionOrderReservedOtherStore.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_NoEditionOrderReservedOtherStore</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
PRIORVALUE(Reserved__c ) = true,
NOT(ISNEW()),
OR(
$Profile.Name = &quot;ICONiCS_SA_Manager&quot;,
$Profile.Name = &quot;ICON_SA Manager&quot;,
$Profile.Name = &quot;ICON_SAManager_EVERYWHERE&quot;
),
 My_Store__c =false
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify a reserved order that is not attached to your store</errorMessage>
</ValidationRule>