force-app/main/default/objects/Exclusive_Campaign_Order__c/validationRules/VR05_NoEditionOrderReservedOtherZone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_NoEditionOrderReservedOtherZone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
PRIORVALUE(Reserved__c ) = true,
NOT(ISNEW()),
OR(
$Profile.Name = &quot;ICON_Corporate_EVERYWHERE&quot;,
$Profile.Name = &quot;ICON_Corporate&quot;,
$Profile.Name = &quot;ICONiCS_Corporate&quot;
),
  My_Management_Zone_Level__c =false
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify a reserved order that is not attached to your zone</errorMessage>
</ValidationRule>