force-app/main/default/objects/Exclusive_Campaign_Order__c/validationRules/VR06_ReservedSerialNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06_ReservedSerialNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Serial_Number_Quota__r.Status__c, &apos;Reserved&apos;),
OR(
ISNEW(),
ISCHANGED(Serial_Number_Product__c)
)
)</errorConditionFormula>
    <errorDisplayField>Serial_Number_Quota__c</errorDisplayField>
    <errorMessage>This serial number is already reserved. Please Select an available Serial Number.</errorMessage>
</ValidationRule>