force-app/main/default/objects/Exclusive_Campaign_Order__c/listViews/Arty2021_Products_available_G_Hildebr.listView-meta.xml
<ListView>
    <fullName>Arty2021_Products_available_G_Hildebr</fullName>
    <columns>NAME</columns>
    <columns>Serial_Number_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>ARTYCAPUCINES MM Gregor Hildebrandt</value>
    </filters>
    <filters>
        <field>Exclusive_Campaign__c</field>
        <operation>equals</operation>
        <value>Artycapucines 2021</value>
    </filters>
    <filters>
        <field>Reserved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Arty2021 - Products available G. Hildebr</label>
    <language>en_US</language>
</ListView>