force-app/main/default/objects/Exclusive_Campaign_Order__c/listViews/Artycap_2021_Total_Products_Available.listView-meta.xml
<ListView>
    <fullName>Artycap_2021_Total_Products_Available</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Product__c</columns>
    <columns>Serial_Number_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reserved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Exclusive_Campaign__c</field>
        <operation>equals</operation>
        <value>Artycapucines 2021</value>
    </filters>
    <label>Artycap 2021 - Total Products Available</label>
</ListView>