force-app/main/default/objects/Exclusive_Campaign_Order__c/listViews/Artycap_2022_Total_Products_Available.listView-meta.xml
<ListView>
    <fullName>Artycap_2022_Total_Products_Available</fullName>
    <booleanFilter>(1 AND 2 AND 6 ) OR (1 AND 3 AND 4  AND 6) OR (1 AND 5  AND 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>Client_Dream_ID__c</columns>
    <columns>Client__c</columns>
    <columns>SKU__c</columns>
    <columns>Product__c</columns>
    <columns>Artist_Name__c</columns>
    <columns>Product_Color__c</columns>
    <columns>Serial_Number_Product__c</columns>
    <columns>Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exclusive_Campaign_Name__c</field>
        <operation>equals</operation>
        <value>Artycapucines 2022</value>
    </filters>
    <filters>
        <field>Corp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Management_Level_Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Reserved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Artycapucines 2022 - Orders</label>
</ListView>