force-app/main/default/objects/Exclusive_Campaign_Order__c/listViews/Artycapucines_2022_Canceled_Orders.listView-meta.xml
<ListView>
    <fullName>Artycapucines_2022_Canceled_Orders</fullName>
    <booleanFilter>1 AND 2 AND (3 OR (4 AND 5) OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Product__c</columns>
    <columns>Artist_Name__c</columns>
    <columns>Serial_Number_Product__c</columns>
    <columns>Store__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCanceled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Exclusive_Campaign_Name__c</field>
        <operation>equals</operation>
        <value>Artycapucines 2022</value>
    </filters>
    <filters>
        <field>Corp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Management_Level_Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Artycapucines 2022 - Canceled Orders</label>
</ListView>